<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/create_new_account"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usernameEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:hint="@string/enter_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameEt" />


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:indicatorColor="@color/pink_500"
                app:layout_constraintCircleRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordEt"
                app:trackColor="@color/pink_200"
                tools:visibility="visible" />


            <TextView
                android:id="@+id/textProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/operation_in_progress"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/circularProgressIndicator"
                app:layout_constraintCircleRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toEndOf="@id/circularProgressIndicator"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/passkey_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/sign_into_your_account_with_passkey_message"
                android:textAlignment="center"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circularProgressIndicator" />

            <Button
                android:id="@+id/sign_up_with_passkey_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_with_passkey"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passkey_hint" />


            <TextView
                android:id="@+id/or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/divider"
                android:textAlignment="center"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_with_passkey_btn" />

            <TextView
                android:id="@+id/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/sign_into_your_account_with_password_message"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or" />

            <Button
                android:id="@+id/sign_up_with_password_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up_with_password_instead"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_hint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>